@@ -34,6 +34,7 @@ Fixed bugs
 ----------
 - DoubleToNEq: prefer variables with integral scalar over fractional scalar
 - DualInfer: check if propagating dual variables leads to infeasibility to return Unbounded or Infeasible
+- DualInfer: ensure the primal problem is bounded before changing constraints to equalities
 
 Miscellaneous
 -------------
